--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "electron.js",
   "dependencies": {
+    "musicmetadata": "^2.0.4",
+    "node-dir": "^0.1.12",
     "vue": "^1.0.24",
     "vue-electron": "^1.0.0",
     "vue-resource": "^0.7.0",
