--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "electron.js",
   "dependencies": {
+    "diskdb": "^0.1.14",
+    "mkdirp": "^0.5.1",
     "musicmetadata": "^2.0.4",
     "node-dir": "^0.1.12",
+    "node-localstorage": "^1.3.0",
     "vue": "^1.0.24",
     "vue-electron": "^1.0.0",
     "vue-resource": "^0.7.0",
