--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "electron.js",
   "dependencies": {
-    "diskdb": "^0.1.14",
+    "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
     "musicmetadata": "^2.0.4",
     "node-dir": "^0.1.12",
